# validate-nik

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.md  docker-compose.yml  main.py  nik_parser.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
api/: dependencies.py  serverless.py
api/dto/: __init__.py  responses.py
api/middleware/: __init__.py  auth.py
api/routes/: __init__.py  nik.py
core/domain/: __init__.py  entities.py  interfaces.py  value_objects.py
core/services/: __init__.py  nik_parser_service.py
data/: regions.db  regions_mysql.sql
docs/plans/: 2025-04-25-nik-parser-api-design.md  2025-04-25-nik-parser-api.md
infrastructure/: __init__.py
infrastructure/data/: __init__.py  embedded_region_repository.py  sqlite_region_repository.py
scripts/: init_db.py
static/: index.html
tests/integration/: test_api_endpoints.py  test_middleware.py
tests/unit/api/: test_dto.py
tests/unit/domain/: test_nik_entity.py  test_value_objects.py
tests/unit/infrastructure/: test_embedded_region_repository.py
tests/unit/services/: test_nik_parser_service.py
